--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,15 @@ label {
 .btnPrimary {
   @apply bg-blue-900 text-white px-4 py-1 rounded-md;
 }
+
+table.basic {
+  @apply w-full;
+}
+
+table.basic thead tr td {
+  @apply bg-blue-100;
+}
+
+table.basic tr td {
+  @apply border p-1 border-blue-200;
+}
