--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,7 @@ table.basic thead tr td {
 table.basic tr td {
   @apply border p-1 border-blue-200;
 }
+
+table.basic button {
+  @apply bg-blue-900 text-white text-sm py-1 px-2 rounded-md inline-flex gap-1;
+}
