--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,11 +32,13 @@ table.basic {
   @apply w-full;
 }
 
-table.basic thead tr td {
+table.basic thead tr td,
+table.basic thead tr th {
   @apply bg-blue-100;
 }
 
-table.basic tr td {
+table.basic tr td,
+th {
   @apply border p-1 border-blue-200;
 }
 
